<resources>
    <string name="app_name">FirstSub MADE</string>
    <string name="pc">Gambar Utama</string>
    <string-array name="film_name">
        <item>Perempuan Tanah Jahanam</item>
        <item>Bumi Manusia</item>
        <item>Gundala</item>
        <item>Kembalinya Anak Iblis</item>
        <item>Bebas</item>
        <item>Warkop DKI Reborn</item>
        <item>Dua Garis Biru</item>
        <item>Hit And Run</item>
        <item>Love For Sale 2</item>
        <item>Pretty Boys</item>
        <item>Ratu Ilmu Hitam</item>
        <item>Say I Love You</item>
        <item>Susi Susanti - Love All</item>
        <item>Twivortiare</item>
    </string-array>
    <string name="genre_film">Genre Film</string>
    <string name="pc_bg">Gambar Background</string>
    <string name="tgl">Tanggal Rilis</string>
    <string name="durasi_film">Durasi Movies</string>
    <string name="nama_sutradara"> Nama Sutradara</string>
    <string-array name="rating">
        <item>9.5</item>
        <item>9.5</item>
        <item>9.4</item>
        <item>7.5</item>
        <item>9.6</item>
        <item>5.8</item>
        <item>9.1</item>
        <item>9.6</item>
        <item>9.2</item>
        <item>9.6</item>
        <item>8.6</item>
        <item>9.1</item>
        <item>9.8</item>
        <item>9.1</item>
    </string-array>
    <string name="icon_star">Icon Star</string>
    <string-array name="tgl_release">
        <item>17 Oktober 2019</item>
        <item>15 Agustus 2019</item>
        <item>29 Agustus 2019</item>
        <item>5 September 2019</item>
        <item>3 Oktober 2019</item>
        <item>12 September 2019</item>
        <item>11 Juli 2019</item>
        <item>4 Juni 2019</item>
        <item>31 Oktober 2019</item>
        <item>19 September 2019</item>
        <item>7 November 2019</item>
        <item>4 Juli 2019</item>
        <item>24 Oktober 2019</item>
        <item>29 Agustus 2019</item>
    </string-array>
    <string-array name="duration">
        <item>1j 46m</item>
        <item>3j 1m</item>
        <item>2j 3m</item>
        <item>1j 24m</item>
        <item>1j 59m</item>
        <item>1j 40m</item>
        <item>1j 53m</item>
        <item>1j 54m</item>
        <item>1j 34m</item>
        <item>1j 40m</item>
        <item>1j 39m</item>
        <item>1j 46m</item>
        <item>1j 36m</item>
        <item>1j 43m</item>
    </string-array>
    <string-array name="director_name">
        <item>Joko Anwar</item>
        <item>Hanung Bramantyo</item>
        <item>Joko Anwar</item>
        <item>Rudi Soedjarwo</item>
        <item>Riri Riza</item>
        <item>Rako Prijanto</item>
        <item>Ginatri S. Noer</item>
        <item>Ody C. Harahap</item>
        <item>Andy Bachtiar Yusuf</item>
        <item>Tompi</item>
        <item>Kimo Stamboel</item>
        <item>Faozan Rizal</item>
        <item>Sim F.</item>
        <item>Benni Setiawan</item>
    </string-array>
    <string-array name="genre">
        <item>Horor</item>
        <item>Drama, Sejarah</item>
        <item>Drama, Laga</item>
        <item>Horor</item>
        <item>Drama, Komedi</item>
        <item>Komedi</item>
        <item>Drama, Keluarga</item>
        <item>Komedi, Laga</item>
        <item>Drama, Romantis</item>
        <item>Drama, Komedi</item>
        <item>Horor</item>
        <item>Drama</item>
        <item>Biografi, Drama, Olahraga</item>
        <item>Drama, Romantis</item>
    </string-array>
    <string name="sinopsis_film">Sinopsis Film</string>
    <string name="deskripsi_film">Deskripsi Singkat Film</string>
</resources>