<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/main_picture"
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:contentDescription="@string/pc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/judul_film"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/film_name"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tanggal_rilis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/genre_film"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_film"
                    android:padding="2dp"/>

                    <TextView
                        android:id="@+id/rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:drawableEnd="@drawable/ic_star"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
