<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailFilm">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/film_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rilis :"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/tgl_rilis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tgl"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Genre :"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/genre_film"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Durasi :"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/durasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/durasi_film"
                android:textSize="15sp" />

        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sutradara :"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/sutradara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/nama_sutradara"
                    android:textSize="15sp" />

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="Rate"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_star"
                android:gravity="top"
                android:padding="5dp"
                android:text="@string/rating"
                android:textSize="15sp" />


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_margin="4dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/like"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/ic_thumb_up_black_24dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="4dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/dislike"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/ic_thumb_down_black_24dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="4dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/play"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="4dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/share"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/ic_share_black_24dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/ticket"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/ic_local_play_black_24dp" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopsis_film"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sinopsis_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_film"
                android:textSize="15sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>